app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: nginx
        volumeMounts:
          - name: page-vol
            mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
        - name: page-vol
          configMap:
            name: app1-page
---
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web1
