app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: nginx
        volumeMounts:
          - name: page-vol
            mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
        - name: page-vol
          configMap:
            name: app2-page
---
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: web2
